--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -1,24 +1,27 @@
 ---
 # file: ansible-role-node-exporter/tasks/main.yaml
 
-- name: Check if node_exporter exists
-  stat: path=/usr/bin/node_exporter
-  register: node_exporter
- 
+- include_role:
+    name: ansible-role-reverse-proxy
+  vars:
+    nginx_proxy_pass: http://localhost:9100
+    nginx_data_dir: /opt/nginx-exporter-proxy
+    nginx_container_port: 8444:443
+    nginx_container_name: nginx-exporter-proxy
+
 - name: Download exporter
   get_url:
-    url: https://github.com/prometheus/node_exporter/releases/download/v0.17.0/node_exporter-0.17.0.linux-amd64.tar.gz
-    dest: /opt/exporter.tar.gz
+    url: https://github.com/prometheus/node_exporter/releases/download/v{{ node_exporter_version | default("0.17.0") }}/node_exporter-{{ node_exporter_version | default("0.17.0") }}.linux-amd64.tar.gz
+    dest: /opt/exporter_{{ node_exporter_version | default("0.17.0") }}.tar.gz
   register: download
-  when: not node_exporter.stat.exists
 
 - name: Untar exporter
   unarchive:
-    src: /opt/exporter.tar.gz
+    src: /opt/exporter_{{ node_exporter_version | default("0.17.0")}}.tar.gz
     remote_src: yes
     dest: /opt
     extra_opts: [--strip-components=1]
-  when: download is not skipped
+  when: download is changed
 
 - name: Copy executable to PATH
   copy:
@@ -42,3 +45,6 @@
   service:
     name: node_exporter
     state: started
+    enabled: yes
+
+
