--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -6,18 +6,20 @@
   vars:
     nginx_proxy_pass: http://localhost:9100
     nginx_data_dir: /opt/nginx-exporter-proxy
-    nginx_container_port: 8444:443
+    nginx_container_port: "80:80" 
     nginx_container_name: nginx-exporter-proxy
+    nginx_container_network: host
+    allowedHosts: ['127.0.0.1', '172.16.0.0/12']
 
 - name: Download exporter
   get_url:
-    url: https://github.com/prometheus/node_exporter/releases/download/v{{ node_exporter_version | default("0.17.0") }}/node_exporter-{{ node_exporter_version | default("0.17.0") }}.linux-amd64.tar.gz
-    dest: /opt/exporter_{{ node_exporter_version | default("0.17.0") }}.tar.gz
+    url: https://github.com/prometheus/node_exporter/releases/download/v{{ node_exporter_version }}/node_exporter-{{ node_exporter_version }}.linux-amd64.tar.gz
+    dest: /opt/exporter_{{ node_exporter_version }}.tar.gz
   register: download
 
 - name: Untar exporter
   unarchive:
-    src: /opt/exporter_{{ node_exporter_version | default("0.17.0")}}.tar.gz
+    src: /opt/exporter_{{ node_exporter_version }}.tar.gz
     remote_src: yes
     dest: /opt
     extra_opts: [--strip-components=1]
@@ -30,14 +32,14 @@
     dest: /usr/bin/node_exporter
     owner: root
     group: root
-    mode: 755
+    mode: 0755
   when: download is not skipped 
 
 - name: Create systemd service
   copy: 
     src: node_exporter.service
     dest: /lib/systemd/system/node_exporter.service
-    mode: 644
+    mode: 0644
     owner: root
     group: root
 
