export updates count metrics

--- a/files/node_exporter.service
+++ b/files/node_exporter.service
@@ -3,7 +3,7 @@ Description=Prometheus node exporter.
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/node_exporter --web.listen-address=localhost:9100
+ExecStart=/usr/bin/node_exporter --web.listen-address=localhost:9100 --collector.textfile.directory=/opt/metrics/
 
 [Install]
 WantedBy=multi-user.target
