--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -64,7 +64,7 @@
     name: get security updates
     hour: 12
     user: root
-    job: "echo node_package_security_updates $(apt-get upgrade -s | grep -i \"security\" | wc -l) > /opt/metrics/node_package_security_updates.prom"
+    job: echo node_package_security_updates $(apt-get upgrade -s | grep -i "security" | wc -l) > /opt/metrics/node_package_security_updates.prom
     cron_file: prometheus_security_updates
 
 
@@ -73,6 +73,6 @@
     name: get updates
     hour: 12
     user: root
-    job: "echo node_package_updates $(apt-get upgrade -s |grep -P '^\d+ upgraded'|cut -d" " -f1) > /opt/metrics/node_package_updates.prom"
+    job: echo node_package_updates $(apt-get upgrade -s |grep -P '^\d+ upgraded'|cut -d " " -f1) > /opt/metrics/node_package_updates.prom
     cron_file: prometheus_security_updates
 
