--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -63,6 +63,7 @@
   cron:
     name: get security updates
     hour: 12
+    minute: 0
     user: root
     job: echo node_package_security_updates $(apt-get upgrade -s | grep -i "security" | wc -l) > /opt/metrics/node_package_security_updates.prom
     cron_file: prometheus_security_updates
@@ -72,6 +73,7 @@
   cron:
     name: get updates
     hour: 12
+    minute: 0
     user: root
     job: echo node_package_updates $(apt-get upgrade -s |grep -P '^\d+ upgraded'|cut -d " " -f1) > /opt/metrics/node_package_updates.prom
     cron_file: prometheus_security_updates
