--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -1,3 +1,10 @@
 ---
 # Node-Exporter version to install
-node_exporter_version: 0.17.0
+node_exporter_exporter_version: 0.17.0
+node_exporter_listen_address: "127.0.0.1:9100"
+node_exporter_metrics_updates: true
+
+node_exporter_data_dir: "{{ global_ansible_dir | default('/opt/default') }}/node_exporter"
+node_exporter_reverse_proxy: "{{ reverse_proxy_nginx_label | default('role=reverse_proxy')}}"
+node_exporter_proxy_data_dir: "{{ reverse_proxy_nginx_data_dir | default('/opt/default/nginx') }}"
+node_exporter_prometheus_metrics: "{{ global_prometheus_metrics | default('/opt/default/metrics')}}"
